<resources>

    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Ribbit2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t Have An Account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_Title">Oops!!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="login_error_Title">Oops!!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No New messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="error_title">We\'re Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your devices external storage</string>
    <string name="general_error">Sorry, There was an error!</string>
    <string name="video_file_size_warning">Your video must be less then 10Mb</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_to_large">The Selected field is to large. Please select a new file.</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">"There was an error with the file selected. Please choose a different file."</string>
    <string name="error_selecting_file_title">"We're sorry!"</string>
    <string name="success_message">"Message sent!"</string>
    <string name="success_sending_message">"There was an error sending your message. Please try again."</string>
    <string name="content_disctiption_bacground_image">"Ribbit Frog Background Image"</string>

    <string-array name = "camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

</resources>
